# blade

./: .gitignore  Cargo.toml  README.md
book/: intro.md
data/: BLADE_ethereum__erc20_transfers__10001000_to_10001999.parquet
docs/: gotchas.md  intro.md
src/: lib.rs  main.rs
src/transfers/: mod.rs  transfers.rs  writer.rs
src/transfers/compression/: address.rs  block_number.rs  chain_id.rs  erc20.rs  from_address.rs  log_index.rs  mod.rs  to_address.rs  transaction_hash.rs  transaction_index.rs  value_string.rs
