[package]
name = "blade"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
arrow = "55.0.0"
bigdecimal = "0.4.8"
float_eq = "1.0.1"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
owo-colors = "4.2.0"
polars = { version = "0.47.1", features = ["parquet", "diagonal_concat"]}
schemars = "0.8.22"
